@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
left to right direction
top to bottom direction

skinparam classAttributeIconSize "2"


class CreatEmployeeUi {
  + CreatEmployeeUi():
  - controller: CreatEmployeeController
  - requestName(): String
  - displayStoresOptions(List<Store>): void
  - requestData(): void
  - requestEmail(): String
  - requestPassword(): String
  - requestDescptions(): String
  + run(): void
  - requestSalary(): int
  - requestPhone(): String
  - requestTaxNumber(): int
  - submitData(): void
  - requestAddress(): String
  - displayAndSelectStores(): Store
   controller: CreatEmployeeController
}

class CreatEmployeeController {
  + CreatEmployeeController():
  - storeRepository: StoreRepository
  - authenticationRepository: AuthenticationRepository
  + createEmployee(String, String, int, String, String, String, String, Roles[], int, Store): Optional<EmployeeProject>
   stores: List<Store>
   authenticationRepository: AuthenticationRepository
   storeRepository: StoreRepository
}

class CreateStoreUI {
  + CreateStoreUI():
  + run(): void
}

class CreateStoreController {
  + CreateStoreController():
  + createStore(String, String, String, String, String, int): Store
}

class Store {
  + Store(String, String, String, String, String, int):
  - name: String
  - phone: String
  - vatNumber: String
  - branchNumber: int
  - localManager: EmployeeProject
  - address: String
  - email: String
  - employees: List<EmployeeProject>
  + validate(String, String, String, String, String, int): boolean
  + toString(): String
   name: String
   employees: List<EmployeeProject>
   localManager: EmployeeProject
   branchNumber: int
   email: String
   phone: String
   vatNumber: String
   address: String
}

class Announcement {
  + Announcement(Property, int):
  - commission: int
  - property: Property
  + validateAnnouncement(Announcement): void
   commission: int
   property: Property
}

class Repositories {
  - Repositories():
  ~ propertyRepository: PropertyRepository
  ~ authenticationRepository: AuthenticationRepository
  ~ clientRepository: ClientRepository
  - instance: Repositories
  ~ announcementRepository: AnnouncementRepository
  ~ storeRepository: StoreRepository
   announcementRepository: AnnouncementRepository
   propertyRepository: PropertyRepository
   instance: Repositories
   clientRepository: ClientRepository
   authenticationRepository: AuthenticationRepository
   storeRepository: StoreRepository
}

class StoreRepository {
  + StoreRepository():
  ~ stores: List<Store>
  + addStore(Store): void
  - validateStore(Store): void
  + createEmployee(String, String, int, String, String, String, String, Roles[], int, Store): Optional<EmployeeProject>
  - addEmployeeToStore(Store, EmployeeProject): void
  + addEmployeeToStorePublic(Store, EmployeeProject): void
  + listEmployees(): List<EmployeeProject>
   stores: List<Store>
}
class AnnouncementRepository {
  + AnnouncementRepository():
  ~ announcements: List<Announcement>
  + createAnnouncement(Property, int): Optional<Announcement>
  + addAnnouncement(Announcement): void
  + removeAnnouncement(Announcement): boolean
}

class ShowEmployeeUI{
  + void run()
}

class ShowEmployeeController{
  + ShowEmployeeController
  + ShowEmployeeController(AuthenticationRepository authenticationRepository)
  + AnnouncementRepository getAnnouncementRepository()
  - AuthenticationRepository getAuthenticationRepository()
  + StoreRepository getStoreRepository()
  + void showStoresandEmployes()
  + void displayEmployee()
}


CreatEmployeeUi               -->  CreatEmployeeController      : "«create»"
CreateStoreController        "1" *--> "StoreRepository"
CreateStoreUI                 ->  CreateStoreController        : "«create»"
CreatEmployeeController      "1" *--> "storeRepository\n1" StoreRepository
ShowEmployeeUI                 ->  ShowEmployeeController        : "«create»"
ShowEmployeeController .> Repositories: repositories
AnnouncementRepository       "1" *--> "announcements\n*" Announcement
Store                        "1" *--> "repositories\n1" Repositories
Repositories                  -->  StoreRepository              : "«create»"
Repositories                  -->  AnnouncementRepository       : "«create»"
@enduml